[project]
name = "loyverse-sdk"
version = "0.2.2"
description = "Asynchronous Python SDK for the Loyverse API"
readme = "README.md"
authors = [{ name = "dagsdags212", email = "jegsamson.dev@gmail.com" }]
license = { text = "MIT" }
keywords = ["loyverse", "pos", "api", "sdk", "async"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries :: Python Modules",
]

requires-python = ">=3.12"
dependencies = [
  "pydantic>=2.12.4",
  "pydantic-settings>=2.12.0",
  "httpx>=0.28.1",
  "sqlmodel>=0.0.27",
  "rich>=14.2.0",
  "pytz>=2025.2",
  "duckdb>=1.1.0",
  "polars>=1.0.0",
  "pyarrow>=15.0.0",
]

[project.urls]
Homepage = "https://github.com/dagsdags212/loyverse_sdk"
Repository = "https://github.com/dagsdags212/loyverse_sdk"
Issues = "https://github.com/dagsdags212/loyverse_sdk/issues"

[tool.uv]
dev-dependencies = [
  "anyio>=4.11.0",
  "pytest>=9.0",
  "pytest-asyncio>=1.3.0",
  "pytest-mock>=3.15.1",
  "respx>=0.22.0",
]

[tool.uv.workspace]
members = ["."]

[tool.uv.sources]
loyverse-sdk = { workspace = true, editable = true }

[tool.pytest.ini_options]
minversion = "9.0"
pythonpath = ["."]

testpaths = ["tests"]

markers = ["integration: marks integration tests", "unit: marks unit tests"]

filterwarnings = ["ignore::DeprecationWarning"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/loyverse_sdk"]
